# fast_EDI

./: README.MD
camera_response_function/: crf.txt
dv-module/event-irrdiance-est/: CMakeLists.txt  EventIrrdianceEst.cpp  dvec_base.hpp
dv-module/event-irrdiance-est/flatbuffers/: base.h  flatbuffers.h  stl_emulation.h
dv-module/fast-edi/: .gitignore  CMakeLists.txt  FEDI.cpp
